# SD-Vault

./: .claudeignore  .gitignore  CLAUDE.md  README.md  SD-Vault Anleitung.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
.claude/: settings.json
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-04-21-core-completion.md  2026-04-21-google-drive-sync.md  2026-04-21-import-export.md  2026-04-21-password-generator.md  2026-04-21-sd-vault.md  2026-04-21-sync-webdav-sftp.md  2026-04-22-totp-hibp-search-attachments-webdav-pdf.md
flatpak/: de.shadowdev.sd-vault.desktop  de.shadowdev.sd-vault.json  de.shadowdev.sd-vault.metainfo.xml  sd-vault-wrapper
src/: App.css  App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: de.shadowdev.SDVault.metainfo.xml
src-tauri/src/: commands.rs  crypto.rs  db.rs  emergency_kit.rs  import_export.rs  lib.rs  main.rs
src-tauri/src/sync/: config.rs  google_drive.rs  local.rs  mod.rs  sftp.rs  webdav.rs
src/components/: AppearanceSettings.tsx  BottomNav.tsx  EntryDetail.tsx  EntryList.tsx  FirstRunSetup.tsx  GoogleDriveSync.tsx  HealthDashboard.tsx  ImportExport.tsx  LockScreen.tsx  MobileDetailScreen.tsx  MobileVaultList.tsx  PasswordGenerator.tsx  QuickSearch.tsx  SecuritySettings.tsx  Settings.tsx  Sidebar.tsx  SyncSettings.tsx  SyncStatus.tsx  VaultView.tsx
src/utils/: categories.tsx  clipboard.ts  constants.ts  generator.ts  hibp.ts  mobile.ts  strength.ts  theme.ts  totp.ts
(+5 files in other folders)
